[gd_scene load_steps=10 format=3 uid="uid://3ryyux5dk14m"]

[ext_resource type="Script" uid="uid://bkfrpm4r80sf2" path="res://scenes/ui/play_selector.gd" id="1_8ha05"]
[ext_resource type="Texture2D" uid="uid://c65soght4j8py" path="res://art/tile_0087.png" id="2_1jh0v"]
[ext_resource type="Resource" uid="uid://cj8wg6pkgahdr" path="res://scenes/run/run_startup.tres" id="2_osesr"]
[ext_resource type="Texture2D" uid="uid://wy0km0q1cnv8" path="res://art/tile_0119.png" id="3_a4gkq"]

[sub_resource type="Gradient" id="Gradient_d3fc5"]
colors = PackedColorArray(0.0925943, 0.108696, 0.555451, 1, 0.225601, 0.34753, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3olvj"]
gradient = SubResource("Gradient_d3fc5")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_2wnys"]
font_size = 48
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.341176)

[sub_resource type="LabelSettings" id="LabelSettings_37jyt"]
font_size = 32
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.341176)

[sub_resource type="ButtonGroup" id="ButtonGroup_8tgp3"]

[node name="PlaySelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ha05")
run_startup = ExtResource("2_osesr")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_3olvj")

[node name="Texts" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_top = -5.0
offset_right = 99.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_constants/separation = -3

[node name="Title" type="Label" parent="Texts"]
unique_name_in_owner = true
layout_mode = 2
text = "Student"
label_settings = SubResource("LabelSettings_2wnys")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Texts"]
unique_name_in_owner = true
layout_mode = 2
text = "A normie student"
label_settings = SubResource("LabelSettings_37jyt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterPotrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -79.0
offset_right = 81.0
offset_bottom = -19.0
grow_vertical = 0
texture = ExtResource("2_1jh0v")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -27.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
text = "Start
"

[node name="PlayerButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_right = 101.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StudentButton" type="Button" parent="PlayerButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_8tgp3")

[node name="Icon" type="TextureRect" parent="PlayerButtons/StudentButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_a4gkq")
expand_mode = 1
stretch_mode = 5

[node name="WizardButton2" type="Button" parent="PlayerButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8tgp3")

[node name="Icon" type="TextureRect" parent="PlayerButtons/WizardButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_a4gkq")
expand_mode = 1
stretch_mode = 5

[node name="AssassinButton3" type="Button" parent="PlayerButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8tgp3")

[node name="Icon" type="TextureRect" parent="PlayerButtons/AssassinButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_a4gkq")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PlayerButtons/StudentButton" to="." method="_on_student_button_pressed"]
[connection signal="pressed" from="PlayerButtons/WizardButton2" to="." method="_on_wizard_button_2_pressed"]
[connection signal="pressed" from="PlayerButtons/AssassinButton3" to="." method="_on_assassin_button_3_pressed"]
